Issue number:  Fix for Seebeyond reconnect issue and jmx monitoring docs Reviewed by:   Siva and Binod
svn path=/trunk/; revision=88